# Fairy-Stockfish-Rust

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
src/: fairystockfishrs.cpp  fairystockfishrs.h  lib.rs
